test/acceptance/validating/failing/include-a-file-without-get-then-quit.spun
include "../../parsing/passing/sleep"

quit
